WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40594
audio/x-mp3 MIME type not recognized
https://bugs.webkit.org/show_bug.cgi?id=40594
Summary
audio/x-mp3 MIME type not recognized
Eric Carlson
Reported
2010-06-14 15:23:40 PDT
OSX WebKit won't open an MP3 file with the MIME type "audio/x-mp3" in a media document. MediaPlayerPrivateQTKit get a list of file extensions it supports from QTKit, and use UTI to convert those to MIME types. UTI returns "audio/mpeg" as the only type for .mp3, so we claim to not support "audio/x-mpeg".
http://web.mac.com/eric.carlson/test/bipbop.mp3
Attachments
proposed patch
(10.50 KB, patch)
2010-06-14 17:09 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2010-06-14 15:24:07 PDT
rdar://7875393
Eric Carlson
Comment 2
2010-06-14 17:09:18 PDT
Created
attachment 58729
[details]
proposed patch
Oliver Hunt
Comment 3
2010-06-14 17:14:47 PDT
Comment on
attachment 58729
[details]
proposed patch r=me
Eric Carlson
Comment 4
2010-06-14 19:31:08 PDT
http://trac.webkit.org/changeset/61172
WebKit Review Bot
Comment 5
2010-06-14 19:46:29 PDT
http://trac.webkit.org/changeset/61172
might have broken Qt Linux Release
Eric Carlson
Comment 6
2010-06-14 19:58:21 PDT
(In reply to
comment #5
)
>
http://trac.webkit.org/changeset/61172
might have broken Qt Linux Release
http://trac.webkit.org/changeset/61173
FTW?
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug